# AStockTradingAgents

./: .env.example  .gitignore  README.md  docker-compose.yml  test_stock_detail.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: dependencies.py  main.py
backend/docs/: agent_architecture.md  data_field_contract.md  data_source_architecture.md  data_source_smoke_test.md  fundamental_data_contract.md  fundamental_data_smoke_test.md  rag_pgvector_production_setup.md
backend/scripts/: audit_chat_orchestrator.py  audit_deepseek_connection.py  audit_rag_pipeline.py  backfill_embeddings.py  compare_analysis_engines.py  evaluate_chat_agent.py  generate_sw_l1_industry_map_csv.py  import_industry_map.py  import_stock_master.py  ingest_financial_document.py  probe_hk_fundamental_sources.py  probe_industry_hot_sources.py  probe_sina_sources.py  refresh_industry_hot_stocks.py  run_rag_eval.py  smoke_multi_worker_runs.py  smoke_news_cache.py  smoke_redis_cache.py  smoke_stock_cache.py  verify_langgraph_analysis_graph.py  verify_langgraph_real_agents.py  verify_langgraph_real_synthesis.py  verify_m40c_runtime_regression.py  verify_redis_run_registry.py
backend/tests/: test_c10_agent_golden_tasks.py  test_c10_capability_manifest.py  test_c10_evaluation_script.py  test_c11_chat_ux_contract.py  test_c11_internal_agent_workflow.py  test_c11_rag_retriever.py  test_c11_rag_review_agents.py  test_c11c_analysis_save_report.py  test_c11c_e2e_contract.py  test_c11c_rag_visibility.py  test_c11c_timeout_contract.py  test_c12_analysis_save_history_e2e.py  test_c12_chat_ux_refactor.py  test_c12_rag_agent_contract.py  test_c12_session_persistence.py  test_c13_frontend_stream_contract.py  test_c13_streaming_api.py  test_c13_streaming_events.py  test_c13_streaming_persistence.py  test_c13b_planner_stream_events.py  test_c13b_rag_stream_events.py  (+54 more)
(+357 files in other folders)
