[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymongo>=4.17.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "uvicorn[standard]>=0.47.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
]
